--- a/IoVA-api/package.json
+++ b/IoVA-api/package.json
@@ -6,9 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "mysql": "^2.11.1",
     "serve-favicon": "~2.3.0"
   }
 }
