--- a/IoVA-api/package.json
+++ b/IoVA-api/package.json
@@ -11,6 +11,7 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "mysql": "^2.11.1",
+    "request": "^2.78.0",
     "serve-favicon": "~2.3.0"
   }
 }
