--- a/IoVA-api/package.json
+++ b/IoVA-api/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.15.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "formidable": "^1.0.17",
     "morgan": "~1.6.1",
     "mysql": "^2.11.1",
     "request": "^2.78.0",
